replacements & time format